--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -1065,16 +1065,22 @@
     "filtered_grMoon = sfft_grMoon * sfft_filter\n",
     "ifft_grMoon = ft.ifft2(filtered_grMoon)\n",
     "\n",
-    "fig, axes = plt.subplots(2,2, figsize=(15, 15))\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(15, 15))\n",
     "ax = axes.ravel()\n",
     "\n",
-    "ax[0].imshow(np.abs(sfft_grMoon), norm = LogNorm(vmin = 90,vmax = 100000), cmap ='gray')\n",
+    "ax[0].imshow(np.abs(sfft_grMoon),\n",
+    "             norm=LogNorm(vmin=90, vmax=100000),\n",
+    "             cmap='gray')\n",
     "ax[0].set_title(\"Image in Fourier space\")\n",
-    "ax[1].imshow(np.abs(sfft_filter), norm = LogNorm(vmin = 1,vmax = 100000), cmap ='gray')\n",
+    "ax[1].imshow(np.abs(sfft_filter),\n",
+    "             norm=LogNorm(vmin=1, vmax=100000),\n",
+    "             cmap='gray')\n",
     "ax[1].set_title(\"Filter in Fourier space\")\n",
-    "ax[2].imshow(np.abs(filtered_grMoon), norm = LogNorm(vmin = 1,vmax = 100000), cmap ='gray')\n",
+    "ax[2].imshow(np.abs(filtered_grMoon),\n",
+    "             norm=LogNorm(vmin=1, vmax=100000),\n",
+    "             cmap='gray')\n",
     "ax[2].set_title(\"Filtered image\")\n",
-    "ax[3].imshow(np.abs(ifft_grMoon), cmap ='gray')\n",
+    "ax[3].imshow(np.abs(ifft_grMoon), cmap='gray')\n",
     "ax[3].set_title(\"Filtered image\")"
    ]
   },
